# rendering-comparison

./: .gitignore  README.md
go-htmx/: README.md  index.html
html-elements/fsharp-giraffe/: Program.fs
html-elements/go-htmx/: main.go
html-elements/nextjs/app/csr/: page.tsx
html-elements/rakkas/src/routes/: ssr.page.tsx
html-elements/remix/app/routes/: ssr.tsx
html-elements/rust-axum/: Cargo.toml
html-elements/rust-axum/src/: main.rs
html-elements/svelte/src/routes/ssr/: +page.js
nextjs/app/: player.tsx  players.tsx
nextjs/app/csr/: page.tsx
nextjs/app/rsc/: page.tsx
nextjs/app/ssr/: page.tsx
rakkas/: package-lock.json  package.json
rakkas/src/routes/: ssr.page.tsx
remix/app/routes/: ssr.tsx
rust-axum/: README.md  tailwind.config.js
rust-axum/src/: main.rs
svelte/src/routes/ssr/: +page.svelte
