[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
html-macro = "0.2.5"
virtual-node = "0.5.0"
mime = "0.3.17"
